data/forge_javadoc/1.9.4/raw/net/minecraft/init/Blocks.md
---
title: "Blocks"
description: "public class Blocks extends java.lang.Object"
package: "net/minecraft/init"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/init/Blocks.html"
sourceType: javadoc
---

# Blocks

**Inheritance:** java.lang.Object → net.minecraft.init.Blocks

## Class signature

```java
public class Blocks extends java.lang.Object
```

## Constructors

- `Blocks()`

## Fields

- `static Block ACACIA_DOOR`
- `static Block ACACIA_FENCE`
- `static Block ACACIA_FENCE_GATE`
- `static Block ACACIA_STAIRS`
- `static Block ACTIVATOR_RAIL`
- `static Block AIR`
- `static Block ANVIL`
- `static Block BARRIER`
- `static BlockBeacon BEACON`
- `static Block BED`
- `static Block BEDROCK`
- `static Block BEETROOTS`
- `static Block BIRCH_DOOR`
- `static Block BIRCH_FENCE`
- `static Block BIRCH_FENCE_GATE`
- `static Block BIRCH_STAIRS`
- `static Block BOOKSHELF`
- `static Block BREWING_STAND`
- `static Block BRICK_BLOCK`
- `static Block BRICK_STAIRS`
- `static BlockBush BROWN_MUSHROOM`
- `static Block BROWN_MUSHROOM_BLOCK`
- `static BlockCactus CACTUS`
- `static Block CAKE`
- `static Block CARPET`
- `static Block CARROTS`
- `static BlockCauldron CAULDRON`
- `static Block CHAIN_COMMAND_BLOCK`
- `static BlockChest CHEST`
- `static Block CHORUS_FLOWER`
- `static Block CHORUS_PLANT`
- `static Block CLAY`
- `static Block COAL_BLOCK`
- `static Block COAL_ORE`
- `static Block COBBLESTONE`
- `static Block COBBLESTONE_WALL`
- `static Block COCOA`
- `static Block COMMAND_BLOCK`
- `static Block CRAFTING_TABLE`
- `static Block DARK_OAK_DOOR`
- `static Block DARK_OAK_FENCE`
- `static Block DARK_OAK_FENCE_GATE`
- `static Block DARK_OAK_STAIRS`
- `static BlockDaylightDetector DAYLIGHT_DETECTOR`
- `static BlockDaylightDetector DAYLIGHT_DETECTOR_INVERTED`
- `static BlockDeadBush DEADBUSH`
- `static Block DETECTOR_RAIL`
- `static Block DIAMOND_BLOCK`
- `static Block DIAMOND_ORE`
- `static Block DIRT`
- `static Block DISPENSER`
- `static BlockDoublePlant DOUBLE_PLANT`
- `static BlockSlab DOUBLE_STONE_SLAB`
- `static BlockSlab DOUBLE_STONE_SLAB2`
- `static BlockSlab DOUBLE_WOODEN_SLAB`
- `static Block DRAGON_EGG`
- `static Block DROPPER`
- `static Block EMERALD_BLOCK`
- `static Block EMERALD_ORE`
- `static Block ENCHANTING_TABLE`
- `static Block END_BRICKS`
- `static Block END_GATEWAY`
- `static Block END_PORTAL`
- `static Block END_PORTAL_FRAME`
- `static Block END_ROD`
- `static Block END_STONE`
- `static Block ENDER_CHEST`
- `static Block FARMLAND`
- `static BlockFire FIRE`
- `static Block FLOWER_POT`
- `static BlockDynamicLiquid FLOWING_LAVA`
- `static BlockDynamicLiquid FLOWING_WATER`
- `static Block FROSTED_ICE`
- `static Block FURNACE`
- `static Block GLASS`
- `static Block GLASS_PANE`
- `static Block GLOWSTONE`
- `static Block GOLD_BLOCK`
- `static Block GOLD_ORE`
- `static Block GOLDEN_RAIL`
- `static BlockGrass GRASS`
- `static Block GRASS_PATH`
- `static Block GRAVEL`
- `static Block HARDENED_CLAY`
- `static Block HAY_BLOCK`
- `static Block HEAVY_WEIGHTED_PRESSURE_PLATE`
- `static BlockHopper HOPPER`
- `static Block ICE`
- `static Block IRON_BARS`
- `static Block IRON_BLOCK`
- `static Block IRON_DOOR`
- `static Block IRON_ORE`
- `static Block IRON_TRAPDOOR`
- `static Block JUKEBOX`
- `static Block JUNGLE_DOOR`
- `static Block JUNGLE_FENCE`
- `static Block JUNGLE_FENCE_GATE`
- `static Block JUNGLE_STAIRS`
- `static Block LADDER`
- `static Block LAPIS_BLOCK`
- `static Block LAPIS_ORE`
- `static BlockStaticLiquid LAVA`
- `static BlockLeaves LEAVES`
- `static BlockLeaves LEAVES2`
- `static Block LEVER`
- `static Block LIGHT_WEIGHTED_PRESSURE_PLATE`
- `static Block LIT_FURNACE`
- `static Block LIT_PUMPKIN`
- `static Block LIT_REDSTONE_LAMP`
- `static Block LIT_REDSTONE_ORE`
- `static Block LOG`
- `static Block LOG2`
- `static Block MELON_BLOCK`
- `static Block MELON_STEM`
- `static Block MOB_SPAWNER`
- `static Block MONSTER_EGG`
- `static Block MOSSY_COBBLESTONE`
- `static BlockMycelium MYCELIUM`
- `static Block NETHER_BRICK`
- `static Block NETHER_BRICK_FENCE`
- `static Block NETHER_BRICK_STAIRS`
- `static Block NETHER_WART`
- `static Block NETHERRACK`
- `static Block NOTEBLOCK`
- `static Block OAK_DOOR`
- `static Block OAK_FENCE`
- `static Block OAK_FENCE_GATE`
- `static Block OAK_STAIRS`
- `static Block OBSIDIAN`
- `static Block PACKED_ICE`
- `static BlockPistonBase PISTON`
- `static BlockPistonMoving PISTON_EXTENSION`
- `static BlockPistonExtension PISTON_HEAD`
- `static Block PLANKS`
- `static BlockPortal PORTAL`
- `static Block POTATOES`
- `static BlockRedstoneComparator POWERED_COMPARATOR`
- `static BlockRedstoneRepeater POWERED_REPEATER`
- `static Block PRISMARINE`
- `static Block PUMPKIN`
- `static Block PUMPKIN_STEM`
- `static Block PURPUR_BLOCK`
- `static BlockSlab PURPUR_DOUBLE_SLAB`
- `static Block PURPUR_PILLAR`
- `static BlockSlab PURPUR_SLAB`
- `static Block PURPUR_STAIRS`
- `static Block QUARTZ_BLOCK`
- `static Block QUARTZ_ORE`
- `static Block QUARTZ_STAIRS`
- `static Block RAIL`
- `static BlockFlower RED_FLOWER`
- `static BlockBush RED_MUSHROOM`
- `static Block RED_MUSHROOM_BLOCK`
- `static Block RED_SANDSTONE`
- `static Block RED_SANDSTONE_STAIRS`
- `static Block REDSTONE_BLOCK`
- `static Block REDSTONE_LAMP`
- `static Block REDSTONE_ORE`
- `static Block REDSTONE_TORCH`
- `static BlockRedstoneWire REDSTONE_WIRE`
- `static BlockReed REEDS`
- `static Block REPEATING_COMMAND_BLOCK`
- `static BlockSand SAND`
- `static Block SANDSTONE`
- `static Block SANDSTONE_STAIRS`
- `static Block SAPLING`
- `static Block SEA_LANTERN`
- `static BlockSkull SKULL`
- `static Block SLIME_BLOCK`
- `static Block SNOW`
- `static Block SNOW_LAYER`
- `static Block SOUL_SAND`
- `static Block SPONGE`
- `static Block SPRUCE_DOOR`
- `static Block SPRUCE_FENCE`
- `static Block SPRUCE_FENCE_GATE`
- `static Block SPRUCE_STAIRS`
- `static BlockStainedGlass STAINED_GLASS`
- `static BlockStainedGlassPane STAINED_GLASS_PANE`
- `static Block STAINED_HARDENED_CLAY`
- `static Block STANDING_BANNER`
- `static Block STANDING_SIGN`
- `static BlockPistonBase STICKY_PISTON`
- `static Block STONE`
- `static Block STONE_BRICK_STAIRS`
- `static Block STONE_BUTTON`
- `static Block STONE_PRESSURE_PLATE`
- `static BlockSlab STONE_SLAB`
- `static BlockSlab STONE_SLAB2`
- `static Block STONE_STAIRS`
- `static Block STONEBRICK`
- `static Block STRUCTURE_BLOCK`
- `static BlockTallGrass TALLGRASS`
- `static Block TNT`
- `static Block TORCH`
- `static Block TRAPDOOR`
- `static Block TRAPPED_CHEST`
- `static Block TRIPWIRE`
- `static BlockTripWireHook TRIPWIRE_HOOK`
- `static Block UNLIT_REDSTONE_TORCH`
- `static BlockRedstoneComparator UNPOWERED_COMPARATOR`
- `static BlockRedstoneRepeater UNPOWERED_REPEATER`
- `static Block VINE`
- `static Block WALL_BANNER`
- `static Block WALL_SIGN`
- `static BlockStaticLiquid WATER`
- `static Block WATERLILY`
- `static Block WEB`
- `static Block WHEAT`
- `static Block WOODEN_BUTTON`
- `static Block WOODEN_PRESSURE_PLATE`
- `static BlockSlab WOODEN_SLAB`
- `static Block WOOL`
- `static BlockFlower YELLOW_FLOWER`
